[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "investor_sdk"
version = "0.0.1"
authors = [
  { name="Arthur Burke", email="arthur2burke@gmail.com" },
]
description = "A package for valuation models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ardieb/investor-sdk"
"Bug Tracker" = "https://github.com/ardieb/investor-sdk/issues"